// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter unfold queries 1`] = `
Object {
  "location.type": Object {
    "$eq": "Point",
  },
}
`;

exports[`filter unfold queries 2`] = `
Object {
  "$or": Array [
    Object {
      "location.type": Object {
        "$eq": "Point",
      },
    },
    Object {
      "location.type": Object {
        "$eq": "Line",
      },
    },
  ],
}
`;

exports[`filter unfold queries 3`] = `
Object {
  "$or": Array [
    Object {
      "location.type": Object {
        "$eq": "Point",
      },
    },
    Object {
      "location.type": Object {
        "$eq": "Line",
      },
    },
    Object {
      "$and": Array [
        Object {
          "location.coordinates": Object {
            "$in": Array [
              40,
              50,
            ],
          },
        },
        Object {
          "location.coordinates": Object {
            "$in": Array [
              20,
              30,
            ],
          },
        },
      ],
    },
  ],
}
`;
